Revision history for pgTAP
==========================

1.3.2
--------------------------

1.3.1 2023-09-24T15:29:42Z
--------------------------
* Revamped the handling of data type declarations in `col_type_is()` to always
  accurately normalize data type representations, whether using aliases, such
  as `varchar` for `character varying`, or more complicated types that failed
  to work in v1.3.0, such as `interval second(0)`. This is done by delegating
  the parsing of the type declaration to a core PostgresSQL function. Many
  thanks to Erik Wienhold for the report and for ultimately uncovering and
  implementing an SQL interface to the `parseTypeString()` core function
  (#315).
* Removed the documentation for `pg_typeof()`, which was removed from pgTAP
  when support for PostgreSQL 8.3 was dropped, since the same function has
  been available in the PostgreSQL core since then.
* Improved the support for type name aliases to the following functions:
    * `has_cast()`
    * `hasnt_cast()`
    * `cast_context_is()`
    * `domain_type_is()`
    * `domain_type_isnt()`
    * `has_operator()`
    * `hasnt_operator()`
* Added the `has_pk( :schema, :table )` variant, which requires that `:table` be
  cast to `name` to avoid confusion with the `has_pk( :schema, :description )`
  variant. Thanks to Adrian Klaver for the report (#287)!

1.3.0 2023-08-14T22:14:20Z
--------------------------
* Fixed an issue with xUnit tests where they would exit immediately on
  unexpected errors (aside from PL/pgSQL RAISE errors) rather than exit just the
  current test function. Thanks to @kzathey for the report and to @fjf2002 for
  the analysis.
* Fixed a pluralization error reporting xUnit test failures to report "failed 1
  test" instead of "failed 1 tests".
* Removed the indentation for diagnostic comments at the start of subtests to
  make it easier to see where they start and end. This changes the output
  format, which will not affect tests run by `pg_prove`, but will break tests